--- a/pages/encargo.html
+++ b/pages/encargo.html
@@ -196,7 +196,7 @@
               
                 <!-- 1 -->
                 <div class="container  gap-1" style="width: 15rem">
-                  <div class="card_o" style="width: 15rem">
+                  <div class="card_o">
                     <div class="card-accesorios">
                       <img src="../img/cad3.jpeg" />
                     </div>
