colocando imagenes de oferta

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       id="navbar-example3"
     >
       <div class="container">
-        <a href="/" class="navbar-brand">
+        <a href="#" class="navbar-brand">
           <img src="img/logonewezp.png" class="img-fluid rounded-top" alt="" />
         </a>
         <button
@@ -251,7 +251,7 @@
             <div class="container fluid d-flex flex-wrap gap-4">
                  <div class="card">
                     <div class="card-accesorios">
-                        <img src="img/cadena7.jpeg" alt="accesorio">
+                        <img src="img/cad7.jpeg" alt="accesorio">
                     </div>
                      <div class="card-infos">
                          <h3 class="card-title">Dije Snake</h3>
@@ -264,7 +264,7 @@
                       <div class="card">
                     <!--============= Card-Ofertas =========-->
                     <div class="card-accesorios">
-                        <img src="img/pulsera320.jpg" alt="accesorio">
+                        <img src="img/cad8.png" alt="accesorio">
                     </div>
                     <!--============= /Card-Ofertas =========-->
                 
@@ -279,7 +279,7 @@
                   <div class="card">
                     <!--============= Card-ofertas =========-->
                     <div class="card-accesorios">
-                        <img src="img/sarcillos320.jpg" alt="headphone">
+                        <img src="img/cad9.png" alt="headphone">
                     </div>
                     <!--============= /Card-ofertas =========-->
                 
