correcion nombres card

--- a/pages/encargo.html
+++ b/pages/encargo.html
@@ -38,7 +38,7 @@
       id="navbar-example3"
     >
       <div class="container">
-        <a href="/" class="navbar-brand">
+        <a href="../index.html" class="navbar-brand">
           <img
             src="../img/logonewezp.png"
             class="img-fluid rounded-top"
