--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <img src="img/cad7.jpeg" alt="accesorio">
                     </div>
                      <div class="card-infos">
-                         <h3 class="card-title">Dije Snake</h3>
+                         <h3 class="card-title">Eye gold 18k</h3>
                          <h2 class="price">$11.<small>99</small></h2>
                           <a href="pages/encargo.html" class="buy">Buy Now</a>
                       </div>
@@ -270,7 +270,7 @@
                 
                     <!--============= card-infos ==========-->
                     <div class="card-infos">
-                        <h3 class="card-title">Pulseras Brazaletes</h3>
+                        <h3 class="card-title">Sarcillos 18k</h3>
                         <h2 class="price">$9.<small>99</small></h2>
                         <a href="pages/encargo.html" class="buy">Buy Now</a>
                     </div>
@@ -285,7 +285,7 @@
                 
                     <!--============= card-infos ==========-->
                     <div class="card-infos">
-                        <h3 class="card-title">Sarcillos</h3>
+                        <h3 class="card-title">Heart Love 18k</h3>
                         <h2 class="price">$19.<small>99</small></h2>
                         <a href="pages/encargo.html" class="buy">Buy Now</a>
                     </div>
