active centrado ayuda

--- a/pages/encargo.html
+++ b/pages/encargo.html
@@ -66,14 +66,14 @@
               >
             </li>
             <li class="nav-item">
-              <a href="../index.html" class="nav-link">Quienes Somos</a>
+              <a href="quienes.html" class="nav-link">Quienes Somos</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Pedidos</a>
+              <a href="#" class="nav-link active">Pedidos</a>
             </li>
 
             <li class="nav-item">
-              <a href="../index.html" class="nav-link">Ayuda</a>
+              <a href="ayuda.html" class="nav-link">Ayuda</a>
             </li>
           </ul>
           <form class="d-flex my-2 my-lg-0">
@@ -195,7 +195,7 @@
                    </div>
               
                 <!-- 1 -->
-                <div class="container  gap-1" style="width: 15rem">
+                <div class="container  gap-1 " style="width: 15rem">
                   <div class="card_o">
                     <div class="card-accesorios">
                       <img src="../img/cad3.jpeg" />
