--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="#inicio" class="nav-link" aria-current="page">Inicio</a>
+              <a href="#inicio" class="nav-link active" aria-current="page">Inicio</a>
             </li>
             <li class="nav-item">
               <a href="pages/quienes.html" class="nav-link">Quienes Somos</a>
@@ -65,7 +65,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="#ayuda" class="nav-link">Ayuda</a>
+              <a href="pages/ayuda.html" class="nav-link">Ayuda</a>
             </li>
           </ul>
           <form class="d-flex my-2 my-lg-0">
@@ -248,7 +248,7 @@
               </p>
             </div>
 
-            <div class="container fluid d-flex flex-wrap gap-4">
+            <div class="container-fluid d-flex flex-wrap gap-4 justify-content-between">
                  <div class="card">
                     <div class="card-accesorios">
                         <img src="img/cad7.jpeg" alt="accesorio">
@@ -310,7 +310,7 @@
         <p class="lead text-center text-white">
           !Gracias por la confianza en nuestros productos!.
         </p>
-        <div class="row g-4">
+        <div class="row g-4 justify-content-between">
           <div class="col-md-6 col-lg-3">
             <div class="card_c bg-light">
               <div class="card-body text-center">
