agrego seccion Cadena

--- a/index.html
+++ b/index.html
@@ -189,28 +189,28 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/kit33.png" class="d-block w-100 pt-5" alt="..." />
+            <img src="img/kit33.png" class="d-block w-100 pt-5" alt="Prendas de Oro" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Oro 18K</h5>
               <p>Temporada 2023 Verano</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/ring1.jpg" class="d-block w-100 pt-5" alt="..." />
+            <img src="img/ring1.jpg" class="d-block w-100 pt-5" alt="Anillo" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Plata 925 y Swarovski</h5>
               <p>Temporada 2023 Verano.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/boda2.jpg" class="d-block w-100 pt-5" alt="..." />
+            <img src="img/boda2.jpg" class="d-block w-100 pt-5" alt="Boda" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Oro y Plata</h5>
               <p>Uniones de Compromiso.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/anillos.jpg" class="d-block w-100 pt-5" alt="..." />
+            <img src="img/anillos.jpg" class="d-block w-100 pt-5" alt="Anillos de oro" />
             <div class="carousel-caption d-none d-md-block">
               <h5>Oro 18k</h5>
               <p>Alianzas de Compromiso.</p>
