--- a/pages/cadenas.html
+++ b/pages/cadenas.html
@@ -23,7 +23,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Pedidos</title>
+    <title>Pedidos-cadenas</title>
   </head>
   <body
     style="position: relative"
@@ -69,7 +69,7 @@
               <a href="quienes.html" class="nav-link">Quienes Somos</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link active">Pedidos</a>
+              <a href="encargo.html" class="nav-link active">Pedidos</a>
             </li>
 
             <li class="nav-item">
@@ -178,15 +178,15 @@
                     <div class="container  text-white" style="width: 15rem">
                         <h3>Accesorios</h3>
               
-                        <ul class="navbar-flex-column d-flex flex-wrap">
-                        <li class="nav-item active">
+                        <ul class="nav flex-column d-flex flex-wrap">
+                        <li class="nav-item">
                           <a href="" class="nav-link text-white">Alianzas</a>
                           </li>
                           <li class="nav-item">
                             <a href="" class="nav-link text-white">Pulseras</a>
                         </li>
-                        <li class="nav-item">
-                          <a href="cadenas.html" class="nav-link text-white">Cadenas</a>
+                        <li class="nav-item active">
+                          <a href="" class="nav-link text-white">Cadenas</a>
                         </li>
                         <li class="nav-item">
                           <a href="" class="nav-link text-white">Sarcillos</a>
@@ -207,19 +207,7 @@
                     </div>
                   </div>
                 </div>
-                <!--2  -->
-                <div class="container  gap-1" style="width: 15rem">
-                  <div class="card_o">
-                    <div class="card-accesorios">
-                      <img src="../img/sarcillos320.jpg" />
-                    </div>
-                    <div class="card-infos">
-                      <h3 class="card-title">Cadena Tegido Medieval</h3>
-                      <h2 class="price">$9.<small>99</small></h2>
-                      <a href="#" class="buy">Buy Now</a>
-                    </div>
-                  </div>
-                </div>
+               
                 <!-- 3 -->
                 <div class="container  gap-1" style="width: 15rem">
                   <div class="card_o">
@@ -289,19 +277,6 @@
                   </div>
                 </div>
 
-                <!-- 8 -->
-                <div class="container  gap-4" style="width: 15rem">
-                  <div class="card_o">
-                    <div class="card-accesorios">
-                      <img src="../img/cad8.png" />
-                    </div>
-                    <div class="card-infos">
-                      <h3 class="card-title">Sarcillos</h3>
-                      <h2 class="price">$19.<small>99</small></h2>
-                      <a href="#" class="buy">Buy Now</a>
-                    </div>
-                  </div>
-                </div>
 
                 <!-- 9 -->
                 <div class="container  gap-4" style="width: 15rem">
